--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "my-project-4",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://idas1.github.io/demof/",
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
@@ -24,7 +25,9 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
